# DojoAgents

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  README.md  README_ZH.md  diagnostics_report.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  test_sub.py  test_uv.py  test_uvicorn_loop.py
data/portfolio/: index.json
docker/agent/: Dockerfile
docker/docs-site/: Dockerfile
docs/: README.md  WECHAT.md  architecture.md  backtest.md  dashboard.md  dojo-chat-v2-protocol.md  dojo_sdk_integration.md  dojoagents_model_cli_guide.md  event_driven_architecture.md  frontend-style-guide.md  multi_agent_plan_architecture.md  performance_profiler.md  plugins.md  precompute_sector_daily.md  prototype.md  sector_precomputed_store_upgrade_design.md  session-store-adapter.md  session_context_memory_design.md  sse  usage.md
docs/hermes/: agent_comparison.md  agent_plugin_execution_plan.md  declarative_plugins_proposal.md  dojoagents_plugins_upgrade.md  financial_services_integration.md  plugin_architecture_analysis.md  weixin_interaction_summary.md
docs/wechat/: get_updates.json
dojoagents/: __init__.py  logging.py  packaging_hooks.py
dojoagents/agent/: __init__.py  canvas_protocol.py  compressor.py  context_length.py  context_usage.py  dashboard_tool_protocol.py  empty_assistant.py  escalation.py  events.py  execute_code_guardrails.py  gemini_provider.py  guardrails.py  (+30 more)
tests/: conftest.py  test_agent_compressor.py  test_agent_escalation.py  test_agent_guardrails.py  test_agent_harness.py  test_agent_loop_background_wakeup.py  test_agent_loop_harness_runtime.py  test_agent_loop_integrated.py  test_agent_loop_plan_activation.py  test_agent_loop_plugins.py  test_agent_loop_session_service.py  test_agent_loop_sse_bridge.py  test_agent_pool.py  test_agent_run_manager.py  test_agent_think_scrubber.py  test_agent_viz_tool.py  test_architecture_boundaries.py  test_built_in_discovery.py  test_built_in_plugins.py  test_canvas_chart_parser.py  test_cli_dashboard.py  test_cli_gateway_setup.py  test_cli_precompute_sector_theme_state.py  test_cli_tasks.py  test_cli_tasks_client.py  test_code_execution_ptc.py  test_config_multi_agent_plan.py  test_context_length.py  test_context_token_and_memory.py  test_context_usage.py  test_core_contracts.py  test_dashboard_canvas_protocol.py  test_dashboard_chat_openai.py  test_dashboard_config_update.py  test_dashboard_sse.py  test_dashboard_sse_integration.py  test_dashboard_static_files.py  test_dojo_agent_session_manager.py  test_dojo_sdk_tool.py  test_dojo_session_repository.py  (+74 more)
(+1193 files in other folders)
