[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dojoagents"
version = "0.0.1"
authors = [
    {name = "Alpha-Dojo"},
]
description = "AI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.20.0,<2",
    "fastapi>=0.110.0,<0.112",
    "uvicorn>=0.31.1,<0.33.0",
    "httpx>=0.27.0,<1",
    "pyyaml>=6.0.1,<7",
    "apscheduler>=3.10.0,<4",
    "pandas>=2.2.0,<3",
    "pyarrow>=14.0.0",
    "qrcode>=7.3.1,<8",
    "mcp>=1.26.0,<2",
    "pyinstrument",
    "strands-agents",
    "strands-agents-tools",
    "dojosdk==0.1.2",
    "exchange-calendars>=4,<5",
    "portalocker",
]


[project.scripts]
dojoagents = "dojoagents.cli.main:main"

[tool.uv.sources]
dojosdk = { path = "../DojoSDK" }

[tool.setuptools.packages.find]
include = ["dojoagents*"]


[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pip>=25.2",
    "mock>=5.2.0",
    "pytest-asyncio>=1.2.0",
]
